--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.554.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.2.0",
     "react-router": "^7.9.6",
     "recharts": "^3.5.0",
