--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "psycopg2-binary>=2.9.11",
     "python-dotenv>=1.2.1",
     "python-jose[cryptography]>=3.5.0",
+    "razorpay>=2.0.0",
     "sqlmodel>=0.0.27",
     "uvicorn>=0.38.0",
 ]
